force-app/main/default/objects/Journal_Configuration__c/Journal_Configuration__c.object-meta.xml
<CustomObject>
    <label>Journal Configuration</label>
    <nameField>
        <displayFormat>JC-{0000}</displayFormat>
        <label>Journal Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>