force-app/main/default/objects/Journal_Configuration__c/fields/Journal_Field__c.field-meta.xml
<CustomField>
    <fullName>Journal_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Field</label>
    <referenceTo>Journal_Field__c</referenceTo>
    <relationshipLabel>Journal Configurations</relationshipLabel>
    <relationshipName>Journal_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>