force-app/main/default/objects/Journal_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Journal_Field__c</columns>
    <columns>Journal_Section__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Personligt møde pr. påbegyndt time</value>
    </filters>
    <label>All</label>
</ListView>